views: only hide page info bubble on user navigations

Otherwise, the page info bubble hides when an iframe on the page navigates,
which happens dozens of times on some JS-heavy pages, or when the page navigates
itself using a meta-refresh or similar.

Bug: 788301
Change-Id: I10e4676bc3e0b4c688e5e435d243799a831c5bc3