chrome/browser/ui/views/page_info/page_info_bubble_view_base.cc
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/strings/string16.h"
 #include "chrome/browser/ui/layout_constants.h"
 #include "chrome/browser/ui/page_info/page_info_dialog.h"
+#include "content/public/browser/navigation_handle.h"
 #include "content/public/browser/web_contents.h"
 #include "ui/base/ui_features.h"
 #include "ui/views/view.h"
@@ -88,5 +89,6 @@ void PageInfoBubbleViewBase::WasHidden() {
 
 void PageInfoBubbleViewBase::DidStartNavigation(
     content::NavigationHandle* handle) {
-  GetWidget()->Close();
+  if (handle->IsInMainFrame())
+    GetWidget()->Close();
 }
